...
    <fragment
        android:id="@+id/edit_profile_fragment"
        android:name="com.example.wordnotes.ui.account.profile.EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile" />
    <navigation
        android:id="@+id/auth_flow"
        app:startDestination="@id/sign_in_fragment">
        <fragment
            android:id="@+id/sign_in_fragment"
            android:name="com.example.wordnotes.ui.auth.SignInFragment"
            tools:layout="@layout/fragment_sign_in">
            <action
                android:id="@+id/action_sign_in_fragment_to_sign_up_fragment"
                app:destination="@id/sign_up_fragment" />
            <action
                android:id="@+id/action_sign_in_fragment_to_forgot_password_fragment"
                app:destination="@id/forgot_password_fragment" />
        </fragment>
        <fragment
            android:id="@+id/sign_up_fragment"
            android:name="com.example.wordnotes.ui.auth.SignUpFragment"
            tools:layout="@layout/fragment_sign_up" />
        <fragment
...
