<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_up_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
...
        <TextView
            android:id="@+id/text_sign_in_suggest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/already_have_a_account"
            app:layout_constraintEnd_toStartOf="@+id/text_sign_in"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/button_sign_up"
            app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

        <TextView
            android:id="@+id/text_sign_in"
...
