<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        app:key="pref_remind"
        app:title="@string/pref_title_remind" />
    <ListPreference
        app:defaultValue="20"
        app:iconSpaceReserved="false"
        app:key="pref_remind_times"
        app:title="@string/pref_title_number_of_reminds_a_day"
        app:useSimpleSummaryProvider="true" />
    <com.example.wordnotes.ui.settings.TimePickerPreference
        app:defaultValue="06:00"
        app:iconSpaceReserved="false"
        app:key="pref_start_time"
        app:title="@string/pref_title_start_time" />
    <com.example.wordnotes.ui.settings.TimePickerPreference
        app:defaultValue="22:00"
        app:iconSpaceReserved="false"
        app:key="pref_end_time"
        app:title="@string/pref_title_end_time" />
</PreferenceScreen>