...
    <item
        android:id="@+id/learning_fragment"
        android:icon="@drawable/ic_book"
        android:title="@string/learning"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account_fragment"
        android:icon="@drawable/ic_person"
        android:title="@string/account"
        app:showAsAction="ifRoom" />
</menu>
