...
                        app:layout_constraintTop_toTopOf="@+id/ic_edit"
                        app:srcCompat="@drawable/ic_chevron_right"
                        app:tint="?colorOnSurface" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_reminder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:paddingVertical="18dp">

                    <ImageView
...
